# Puzzle-Game

./: .gitignore  CMakeLists.txt  FEATURES.md
.github/workflows/: deploy-frontend.yml
levels/Challenge1/: levels1.txt
levels/The slam1/: levels1.txt  levels10.txt  levels11.txt  levels12.txt  levels13.txt  levels14.txt  levels15.txt  levels16.txt  levels17.txt  levels18.txt  levels19.txt  levels2.txt  levels20.txt  levels21.txt  levels3.txt  levels4.txt  levels5.txt  levels6.txt  levels7.txt  levels8.txt  levels9.txt
levels/The small slam/: levels10.txt  levels11.txt  levels12.txt  levels13.txt  levels14.txt  levels15.txt  levels16.txt  levels17.txt  levels18.txt  levels19.txt  levels2.txt  levels20.txt  levels21.txt  levels22.txt  levels23.txt  levels24.txt  levels25.txt  levels26.txt  levels27.txt  levels28.txt  levels29.txt  levels30.txt  levels31.txt  levels32.txt  levels33.txt  levels34.txt  levels35.txt  levels36.txt  levels37.txt  levels38.txt  levels39.txt  levels4.txt  levels40.txt  levels41.txt  levels42.txt  levels5.txt  levels6.txt  levels7.txt  levels9.txt
puzzle-frontend/: index.html  package-lock.json  package.json  vite.config.js
puzzle-frontend/src/: App.jsx  levels.js
puzzle-frontend/src/components/: Board.css  Board.jsx  PiecePreview.css  PiecePreview.jsx
src/: README.md  board.cpp  board.h  main.cpp  piece.cpp  piece.h  solver.cpp  solver.h
src/engine/: board.cpp  board.h  cell.h  piece.cpp  piece.h  placement.h  solver.cpp  solver.h
src/game/: game.cpp  game.h  level_data.h  level_loader.cpp  level_loader.h  piece_library.cpp  piece_library.h
src/web/: server.cpp  solve_api.cpp  solve_api.h
tests/: ut_board_test.cpp  ut_load_test.cpp  ut_peice_test.cpp  ut_solver_test.cpp
